[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "A_SNLSR"
version = "1.0.0"
description = "Adversarial SNLSR."
requires-python = ">=3.12"
dependencies = [
    "numpy>=1.23",
    "pandas>=2.0",
    "scikit-learn>=1.3",
    "matplotlib>=3.7",
    "seaborn>=0.12",
    "fastparquet",
    "pyarrow",
    "torch",
    "tensorboard",
    "tensorboardX",
    "spectral",
    "tqdm",
    "commentjson",
    "torchinfo",
    "torchmetrics",
    "tdigest",
    "xarray",
    "datasets",
    "isort",
    "black",
    "mypy",
    "flake8",
    "flake8-pyproject",
    "pytorch-revgrad",
    "torchvision",
]
[project.optional-dependencies]
daem = [
    "xlutils",
    "xlrd",
    "scikit-image",
    "sewar",
]
[tool.isort]
profile="black"
line_length=100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.flake8]
max-line-length = 100
ignore = ["W503"]